* Admin can't reset user's password due to SQL error (bug 1333) (Erik H)
* Fix dependency listing (include JSON) (bug 1347) (Erik H)
* Make setup.pl generate fewer warnings in the error logs (Erik H)
* Fix 'Save as' in contact account clobbering existing one (bug 1364) (Erik H)
* Fixed empty response causing some problems. (Chris T)

Chris T is Chris Travers
Erik H is Erik Huelsmann


Changelog for 1.4.11
* Fixed account dropdowns on default screen (Nick P)
* Fixed broken comparison with oldvendor (Nick P)
* Fixed workflow for saving reconciliation reports (Nick P)
* Fixed HTML errors in payment details (Nick P)
* Making LaTeX optional on starman (Chris T)
* Fixing issues where colon is in password (Chris T)
* Fixed 'New' button on GL entry screen leaving an uncleared line (Erik H)
* Fixed Account/Heading entry screen selecting tab on 'Update' (Erik H)
* Fixed Heading 'Save' action complaining about conflicting data (Erik H)
* Fixed missing separation of duties on GL (Chris T)
* Fixed GL new button preserving first line (Chris T)
* Fixed AR/AP transactions not saving when using dojo widget (Chris T)
* Multiple fixes showing and saving account/heading headings (Erik H)
* Add 'Delete' option for headings not linked to accounts/headings (Erik H)
* Fixed encoding issue for special characters in password change (Erik H)
* Fixing Malaysian language issues (DB and preferences, bug #1358) (Pongracz I)

Chris T is Chris Travers
Nick P is Nick Prater
Erik H is Erik Huelsmann
Pongracz I is Istvan Pongracz


Changelog for 1.4.10
* Note:  Corrected version numbers in 1.4.10.1, 1.4.10 had 1.4.9 as version
* Malay translation added (Kaiser F, and others)
* Fixed 1292, some template editing scripts linked to wrong mod (Chris T)
* Fixed 1290, payment/receipt screen options never show (Chris T)
* Fixed 1291, cannot change customer/vendor on orders/quotes (Chris T)
* Cleaned up logs a little (Chris T)
* Fixed 1294, cannot change parts description or price on inv. (Chris T)